# only_scan

./: .gitignore  Cargo.toml  Rocket.toml  beans_cofig.json  desk_config.json  diesel.toml  resp.json  start-server.sh  start.sh
blogs/: test.md  test2.md
crud_helper/: Cargo.toml
crud_helper/src/: lib.rs
crud_helper/tests/: testing.rs
migrations/00000000000000_diesel_initial_setup/: down.sql
migrations/2022-01-21-175823_create_task/: up.sql
src/: context.rs  debug.rs  desk.rs  main.rs  repository.rs  scan.rs  scrum.rs  serve.rs  sorted_list.rs  tests.rs  util.rs  vision.rs
src/blog/: mod.rs  post.rs  service.rs
src/fava/: graphs.rs  ingest.rs  main.rs  mod.rs
src/fava/models/: mod.rs  my_date.rs
src/oauth/: mod.rs  user.rs
src/pages/: mod.rs
src/pages/scan/: mod.rs  vision.rs
src/pages/scrum/: mod.rs  models.rs  schema.rs
src/repository/: db_repo.rs  mod.rs
src/scrum/: mod.rs  models.rs
static/: cropper.js  desk.css  dragger.js  fava.css  index.html  scan.css  script.js  scrum.css  style.css
static/scrum/: main.js  sidebar.js
templates/: base.html.hbs  desk.html.hbs  error.html.hbs  index.html.hbs
templates/blog/: blog.html.hbs  index.html.hbs
templates/fava/: fava.html.hbs  graphs.html.hbs  index.html.hbs  ingest.html.hbs  new.html.hbs
templates/fava/ingest/: index.html.hbs  item.html.hbs  last.html.hbs
templates/scan/: account.html.hbs  index.html.hbs  item.html.hbs  new.html.hbs  one.html.hbs
templates/scrum/: detail.html.hbs  index.html.hbs
templates/scrum/partials/: detail.html.hbs  detail2.html.hbs  epic.html.hbs  story.html.hbs
web/: package-lock.json  package.json  rollup.config.js  tsconfig.json
web/src/: index.ts
web/style/: main.sass  main.scss  slider.sass
web/style/slate/: _variables.sass
