[package]
name = "only_scan"
version = "0.1.0"
authors = ["ajuvercr <arthur.vercruysse@ugent.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rand = "0.8.4"

time = { version = "0.2.27", features = ["serde"] }
cool-id-generator = "1.0"

crud_helper = { path = "./crud_helper" }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]
